--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -136,9 +136,7 @@ td a {
 
 
 /* Smartphones (portrait and landscape) ----------- */
-@media only screen 
-and (min-device-width : 320px) 
-and (max-device-width : 480px) {
+@media only screen and (min-device-width : 320px) and (max-device-width : 480px) {
   .show-mobile {
     display: block;
   }
@@ -149,8 +147,7 @@ and (max-device-width : 480px) {
 }
 
 /* Smartphones (landscape) ----------- */
-@media only screen 
-and (min-width : 321px) {
+@media only screen and (min-width : 321px) {
   .show-mobile {
     display: block;
   }
@@ -161,8 +158,7 @@ and (min-width : 321px) {
 }
 
 /* Smartphones (portrait) ----------- */
-@media only screen 
-and (max-width : 320px) {
+@media only screen and (max-width : 320px) {
   .show-mobile {
     display: block;
   }
@@ -173,9 +169,7 @@ and (max-width : 320px) {
 }
 
 /* iPads (portrait and landscape) ----------- */
-@media only screen 
-and (min-device-width : 768px) 
-and (max-device-width : 1024px) {
+@media only screen and (min-device-width : 768px) and (max-device-width : 1024px) {
   .show-mobile {
     display: block;
   }
@@ -186,10 +180,7 @@ and (max-device-width : 1024px) {
 }
 
 /* iPads (landscape) ----------- */
-@media only screen 
-and (min-device-width : 768px) 
-and (max-device-width : 1024px) 
-and (orientation : landscape) {
+@media only screen and (min-device-width : 768px) and (max-device-width : 1024px) and (orientation : landscape) {
   .show-mobile {
     display: block;
   }
@@ -200,10 +191,7 @@ and (orientation : landscape) {
 }
 
 /* iPads (portrait) ----------- */
-@media only screen 
-and (min-device-width : 768px) 
-and (max-device-width : 1024px) 
-and (orientation : portrait) {
+@media only screen and (min-device-width : 768px) and (max-device-width : 1024px) and (orientation : portrait) {
   .show-mobile {
     display: block;
   }
@@ -214,32 +202,29 @@ and (orientation : portrait) {
 }
 
 /* Desktops and laptops ----------- */
-@media only screen 
-and (min-width : 992px) {
-.show-mobile {
-  display: none;
-}
+@media only screen and (min-width : 992px) {
+  .show-mobile {
+    display: none;
+  }
 
-.hide-mobile {
-  display: block;
-}
+  .hide-mobile {
+    display: block;
+  }
 }
 
 /* Large screens ----------- */
-@media only screen 
-and (min-width : 1824px) {
-.show-mobile {
-  display: none;
-}
+@media only screen and (min-width : 1824px) {
+  .show-mobile {
+    display: none;
+  }
 
-.hide-mobile {
-  display: block;
-}
+  .hide-mobile {
+    display: block;
+  }
 }
 
 /* iPhone 4 ----------- */
-@media
-only screen and (-webkit-min-device-pixel-ratio : 1.5),
+@media only screen and (-webkit-min-device-pixel-ratio : 1.5),
 only screen and (min-device-pixel-ratio : 1.5) {
   .show-mobile {
     display: block;
