--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -238,7 +238,7 @@ only screen and (min-device-pixel-ratio : 1.5) {
 /*-------- Navbar section end -----------*/
 
 /* ------- games section start ----------*/
-#opponents-table .opponents:hover {
+#opponents-table .opponents:hover, #games-table .games:hover {
   cursor: pointer;
   background-color: #a4addf;
   color: white;
