--- a/views/home.ejs
+++ b/views/home.ejs
@@ -25,21 +25,21 @@
       <!-- Login Here -->
       <div class="card bg-secondary border-0 mb-0 mt--3">
         <!-- TODO implement sign in with facebook -->
-        <!-- <div class="card-header bg-transparent pb-5">
+        <div class="card-header bg-transparent pb-5">
           <div class="text-muted text-center mt-2 mb-3"><small>Sign in with</small></div>
           <div class="btn-wrapper text-center">
-            <a href="#"
+            <!--   <a href="#"
                class="btn btn-neutral btn-icon">
               <span class="btn-inner--icon"><img src="/assets/facebook.png"></span>
               <span class="btn-inner--text">Facebook</span>
-            </a>
+            </a>  -->
             <a href="#"
                class="btn btn-neutral btn-icon">
               <span class="btn-inner--icon"><img src="/assets/google.svg"></span>
               <span class="btn-inner--text">Google</span>
             </a>
           </div>
-        </div> -->
+        </div>
         <div class="card-body px-lg-5 py-lg-5">
           <div class="text-center text-muted mb-4">
             <small>Sign in with credentials</small>
@@ -102,21 +102,21 @@
       <!-- Register Here -->
       <div class="card bg-secondary border-0 mt--3">
         <!-- TODO implement sign up with facebook -->
-        <!-- <div class="card-header bg-transparent pb-5">
+        <div class="card-header bg-transparent pb-5">
           <div class="text-muted text-center mt-2 mb-3"><small>Sign in with</small></div>
           <div class="btn-wrapper text-center">
-            <a href="#"
+            <!--    <a href="#"
                class="btn btn-neutral btn-icon">
               <span class="btn-inner--icon"><img src="/assets/facebook.png"></span>
               <span class="btn-inner--text">Facebook</span>
-            </a>
+            </a> -->
             <a href="#"
                class="btn btn-neutral btn-icon">
               <span class="btn-inner--icon"><img src="/assets/google.svg"></span>
               <span class="btn-inner--text">Google</span>
             </a>
           </div>
-        </div> -->
+        </div>
         <div class="card-body px-lg-5 py-lg-5">
           <div class="text-center text-muted mb-4">
             <small>Sign up with credentials</small>
@@ -145,18 +145,21 @@
                        name="username"
                        type="text">
               </div>
+              <% if (locals.error_message){ %>
+              <p style="color:red"> <%= error_message %> </p>
+              <% } %>
             </div>
-            <!-- <div class="form-group">
-                    <div class="input-group input-group-merge input-group-alternative mb-3">
-                        <div class="input-group-prepend">
-                            <span class="input-group-text"><i class="far fa-envelope"></i></span>
-                        </div>
-                        <input class="form-control"
-                               placeholder="Email"
-                               name="email"
-                               type="email">
-                    </div>
-                </div> -->
+            <div class="form-group">
+              <div class="input-group input-group-merge input-group-alternative mb-3">
+                <div class="input-group-prepend">
+                  <span class="input-group-text"><i class="far fa-envelope"></i></span>
+                </div>
+                <input class="form-control"
+                       placeholder="Email"
+                       name="email"
+                       type="email">
+              </div>
+            </div>
             <div class="form-group">
               <div class="input-group input-group-merge input-group-alternative">
                 <div class="input-group-prepend">
