--- a/views/partials/navigation_bar.ejs
+++ b/views/partials/navigation_bar.ejs
@@ -20,7 +20,7 @@
           <div class="media align-items-center">
             <i class="fas fa-user-circle fa-2x"></i>
             <div class="media-body  ml-2  d-none d-lg-block">
-              <% if (loggedIn){ %>
+              <% if (locals.loggedIn){ %>
               <span class="mb-0 text-sm  font-weight-bold"><%= name %></span>
               <% }else{ %>
               <span class="mb-0 text-sm  font-weight-bold">Username</span>
@@ -45,12 +45,7 @@
     </a>
 
     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-      <% if (!loggedIn){ %>
-      <li class="nav-item">
-        <a class="nav-link font-weight-bold"
-           href="/">Home <span class="sr-only">(current)</span></a>
-      </li>
-      <% }else{ %>
+      <% if (locals.loggedIn){ %>
       <li class="nav-item">
         <a class="nav-link font-weight-bold"
            href="/games">My Games <span class="sr-only">(current)</span></a>
@@ -71,6 +66,11 @@
         <a class="nav-link font-weight-bold"
            href="/log-out">Log Out <span class="sr-only">(current)</span></a>
       </li>
+      <% }else{ %>
+        <li class="nav-item">
+          <a class="nav-link font-weight-bold"
+             href="/">Home <span class="sr-only">(current)</span></a>
+        </li>
       <% } %>
     </ul>
   </div>
@@ -91,12 +91,7 @@
 
     <div class="navbar-collapse">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-        <% if (!loggedIn){ %>
-        <li class="nav-item active">
-          <a class="nav-link font-weight-bold"
-             href="/">Home <span class="sr-only">(current)</span></a>
-        </li>
-        <% }else{ %>
+        <% if (locals.loggedIn){ %>
         <li class="nav-item active">
           <a class="nav-link font-weight-bold"
              href="/games">My Games <span class="sr-only">(current)</span></a>
@@ -117,6 +112,11 @@
           <a class="nav-link font-weight-bold"
              href="/log-out">Log Out <span class="sr-only">(current)</span></a>
         </li>
+        <% }else{ %>
+          <li class="nav-item active">
+            <a class="nav-link font-weight-bold"
+               href="/">Home <span class="sr-only">(current)</span></a>
+          </li>
         <% } %>
       </ul>
     </div>
@@ -141,7 +141,7 @@
           <div class="media align-items-center">
             <i class="fas fa-user-circle fa-2x"></i>
             <div class="media-body  ml-2  d-none d-lg-block">
-              <% if (loggedIn){ %>
+              <% if (locals.loggedIn){ %>
               <span class="mb-0 text-sm  font-weight-bold"><%= name %></span>
               <% }else{ %>
               <span class="mb-0 text-sm  font-weight-bold">Username</span>
