--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 
-<head>
+<head lang="en" prefix="og: http://ogp.me/ns#">
       <meta charset="UTF-8" />
       <meta name="description"
             content="Store your Scrabble scores here!">
@@ -12,6 +12,14 @@
       <meta name="viewport"
             content="width=device-width, initial-scale=1">
       <title>Scrabble</title>
+
+      <!-- Meta tags for LinkedIn compatibility; Also prefix in line 4 -->
+      <meta property='og:title' content='Scrabble App'/>
+      <meta property='og:image' content='/assets/linkedIn_img.PNG'/>
+      <meta property='og:description' content='Store your Scrabble games!'/>
+      <meta name="author" content="Christos Avdimiotis" />
+      <meta property='og:url' content='https://thawing-caverns-80697.herokuapp.com/'/>
+
       <link rel="stylesheet"
             href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
             integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2"
